# focil

./: Cargo.toml  README.md
crates/focil-fork-choice/: Cargo.toml
crates/focil-fork-choice/src/: lib.rs
crates/focil-store/: Cargo.toml
crates/focil-store/src/: lib.rs
crates/focil-types/: Cargo.toml
crates/focil-types/src/: constants.rs  inclusion_list.rs  lib.rs  signed_inclusion_list.rs  store.rs
